--- a/sass/site/accueil/_accueil.scss
+++ b/sass/site/accueil/_accueil.scss
@@ -10,4 +10,18 @@
     background-color: rgb(107, 189, 189)
 }
 
+#liste-cours{
+    color: blue;
+}
 
+#masthead{
+    background-color: black;
+}
+
+.attachment-thumbnail .size-thumbnail{
+    border: 2px solid black;
+}
+
+.wp-block-column{
+    border: 2px solid black;
+}
