--- a/sass/site/accueil/_accueil.scss
+++ b/sass/site/accueil/_accueil.scss
@@ -25,3 +25,7 @@
 .wp-block-column{
     border: 2px solid black;
 }
+
+img.attachment-thumbnail.size-thumbnail{
+    border: 5px solid rgb(26, 0, 170);
+}
