--- a/style.css
+++ b/style.css
@@ -613,6 +613,7 @@ body.page .main-navigation {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin: 0;
   /* enfant */
   /* enfant */
 }
@@ -623,6 +624,7 @@ body.page .main-navigation {
           transform: translateY(-50vh);
   width: 5em;
   padding: 4px;
+  width: 100%;
 }
 
 .site-header.featured-image .site-branding .site-description {
@@ -682,7 +684,7 @@ body.page .main-navigation {
     font-size: 5vw;
   }
   .site-header.featured-image .site-branding .site-description {
-    font-size: 4vw;
+    font-size: 3vw;
   }
 }
 
@@ -797,14 +799,6 @@ body.page .main-navigation {
 
 #masthead {
   background-color: black;
-}
-
-.attachment-thumbnail .size-thumbnail {
-  border: 2px solid black;
-}
-
-.wp-block-column {
-  border: 2px solid black;
 }
 
 img.attachment-thumbnail.size-thumbnail {
